# vqa-hub

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.json
configs/: default.yaml
src/vqa_hub/: hub.py  router.py  schemas.py
src/vqa_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/vqa_hub/pipelines/: vqa_pipeline.py
src/vqa_hub/providers/: huggingface.py  ollama.py
src/vqa_hub/units/: base.py  fusion_qa.py  fusion_simple.py
src/vqa_hub/units/text/: gpt2_textgen.py  qa_small.py
src/vqa_hub/units/vision/: blip_captioner.py  blip_vqa.py  ocr_trocr.py
src/vqa_hub/utils/: io.py
