
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vqa-hub"
version = "0.2.0"
description = "Hub-and-unit multimodal framework for VQA research"
authors = [{name="Your Name"}]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vqa = "vqa_hub.pipelines.vqa_pipeline:cli_entry"
